# Immuno-Asosiy

./: .gitignore  manage.py  pyproject.toml  requirements.txt
ariza/: admin.py  apps.py  models.py  permissions.py  serializers.py  translation.py  translations.py  urls.py  views.py
bemor/: admin.py  models.py  permissions.py  serializers.py  translation.py  urls.py  utils.py  views.py
bemor/migrations/: 0001_initial.py
core/: settings.py  urls.py
doctors/: models.py
dori/: admin.py  models.py  permissions.py  serializers.py  translation.py  urls.py  views.py
seans/: admin.py  models.py  serializers.py  urls.py  views.py
shared/: cumtom_pagination.py  views.py
shifokor/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
translate/: admin.py  models.py  views.py
translate/migrations/: 0001_initial.py  0002_rename_languege_language_alter_language_options_and_more.py  0003_rename_language_languege_alter_languege_options_and_more.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
